# qwindowkit

./: .gitignore  CMakeLists.txt  README.md
cmake/: setup-qmsetup.cmake
src/: CMakeLists.txt
